软件架构、马原期末总结更新

--- a/软件架构/软件架构.md
+++ b/软件架构/软件架构.md
@@ -1,428 +1,189 @@
-# 软件架构
-
-![image-20230831145059076](https://img-blog.csdnimg.cn/4e51b48182f24337ace8137a4a6db5ff.png)
-
-* 1.
-  * 解决需求不明确的问题
-  * 风险管理不足的问题
-  * 验收测试难度大的问题
-  * 
-* 2.
-  * 大型复杂的软件系统
-* 3.
-  * 不适合
-
-
+# 各章概念
 
 ## 第一章 系统分析与设计概述
 
-* 信息系统的概念
-
-  * 信息心痛是一种能够完成对**业务数据**进行采集、转换、加工、计算、分析、传输、维护等信息处理，并能**就某个方面问题给用户提供信息服务**的计算机应用系统
-
-  ![image-20230902095934478](https://img-blog.csdnimg.cn/b6611e9517db4ad686e09f97d0a578d9.png)
-
-### 信息系统类型
-
-* **业务处理系统 TPS**
-  * 分类：
-    * 商业终端销售系统
-    * 网络银行业务系统
-    * 航空机票订票系统
-    * 酒店系统
-  * ![image-20230902103807123](https://img-blog.csdnimg.cn/94665935260b487183640fd12d34613d.png)
-* 业务处理系统案例
-  * ![image-20230902100404439](https://img-blog.csdnimg.cn/67db081beffc4175a12985731c154129.png)
-
----
-
-
-
-* **管理信息系统MIS**
-  * ![image-20230902100559486](https://img-blog.csdnimg.cn/1a67ffe2e988401a9ffc15bf772f9e99.png)
-* 分类
-  * 人力资源管理信息系统
-  * 企业CRM系统
-  * 企业ERP系统
-  * 学籍管理信息系统
-* 案例
-  * ​	![	](https://img-blog.csdnimg.cn/cea73cbc5f08412bbcb8da2173fb3217.png)
-
----
-
-
-
-* **决策支持系统DSS**
-  * 通过数据分析、模型评估和知识推理等信息处理，以人机交互方式，为决策者解决特定策略问题提供服务支持的信息系统
-  * ![image-20230902101135553](https://img-blog.csdnimg.cn/f9d0f06c55af46548054b66cfabaaa88.png)
-* 类型
-  * 防汛指挥决策支持系统
-  * 法定传染病疫情预测信息系统
-  * 电信营销大数据分析系统
-  * 铁路区域地质灾害预警系统
-* 案例
-  * ![image-20230902101235427](https://img-blog.csdnimg.cn/4a7c2ee5601e45c4ae82a6aca1103b9e.png)
-
----
-
-* **专家系统ES** 
-  * ![image-20230902101304347](https://img-blog.csdnimg.cn/94b9ab91b33549439848c90561e759d9.png)
-* 分类
-  * 城市规划专家系统
-  * 蔬菜病虫害诊断专家系统
-  * AlphaGO围棋机器人
-  * 蛋白质鉴定专家系统
-* 案例
-  * ![image-20230902101431490](https://img-blog.csdnimg.cn/85dc5a53861244e4aedbc2838339985b.png)
-
----
-
-* **办公自动化系统OA**
-  * 实现办公业务流程信息化、自动化处理的信息系统
-  * ![image-20230902103559539](https://img-blog.csdnimg.cn/9ffc9299bcb64769b41d6d5346d2dabf.png) 
-* 分类
-  * 政务办公系统
-  * 高效办公系统
-  * 企业办公系统
-
----
-
-* **知识工作支持系统KWS**
-  * 一种具有强大的数据、图形、图像以及多媒体处理能力...
-  * ![image-20230902103436909](https://img-blog.csdnimg.cn/bf2f3f75a442400fbbfa5df7b1bd3e4b.png)
-* 分类
-  * CAD(计算机辅助设计)工程制图系
-  * EDA(电子设计自动化)工具
-  * CASE(计算机辅助软件工程)工具
-
-* **各类信息系统之间的关系**
-  * ![image-20230902103541159](https://img-blog.csdnimg.cn/0cf67e783fe345099d6fd3f781a605bb.png)、
-
-### 信息系统利益相关者
-
-* 信息系统用户分类
-
-  * 系统内部用户
-
-  > * 业务人员
-  > * 主管、经理和总经理
-
-  * 系统外部用户
-
-  > * 客户
-  > * 供应商
-  > * 合作伙伴
-
-* 信息系统开发人员
-
-  * 系统分析人员
-
-  > * 系统分析师
-  > * 业务领域专家
-
-  * 系统设计人员
-
-  > *  系统架构师
-  > * 软件工程师
-  > * 界面工程师
-  > * 数据库工程师
-
-  * 系统构造人员
-
-  > * 软件程序员
-  > * 硬件工程师
-  > * 网络工程师
-  > * 系统继承工程师
-
-  * 系统管理人员
-
-  > * 客户经理
-  > * 项目经理
-  > * 质量保证人员
-  > * 测试经理
-
-
-
-### 信息系统软件
-
-* 软件特性
-  * ![image-20230902105458756](https://img-blog.csdnimg.cn/2e195f68cdfa4da69d2cc130173beef5.png)
-* 软件开发需解决的本质问题
-  * ![image-20230902105558148](https://img-blog.csdnimg.cn/a637c61a9e32438989b1b75aaedbaed1.png)
-* 软件质量属性
-  * ![image-20230902105646422](https://img-blog.csdnimg.cn/f368d4124e2646478eea3cb48be8455f.png)
-  * ![image-20230902105651284](https://img-blog.csdnimg.cn/7182b3058b9740ca91d2e74ba3137c1e.png)
-* 问题探讨
-
-![image-20230902105847117](https://img-blog.csdnimg.cn/20d5386bc9864f0c95c0593a15ad7099.png)
-
-* > 1. **软件系统**是一组相互关联的软件组件，定制用于满足特定组织或项目的需求，其性质和功能与特定任务或业务问题相关。它们的生命周期与组织或项目相关联，通常需要定制和特定环境支持。
-  > 2. **软件产品**是独立的、通用的、可交付的软件解决方案，用于满足广泛的市场或多个客户的需求。它们具有可重复使用性和销售性质，有更长的生命周期，通常可以在不同环境中部署。
-  >
-  > 区分二者需要考虑定义、性质、用途、生命周期、定制性和部署方式等因素，并理解具体情境，因为有时候它们之间可能会存在一些重叠。
-
-* > 不同领域的信息系统注重不同的非功能质量属性。例如，金融领域强调高性能、可用性和安全性，医疗健康领域关注可靠性和数据安全，航空航天领域侧重可靠性和实时性，而电子商务则需高性能和安全性。工业自动化和物联网强调实时通信，游戏开发注重性能和用户体验，政府和军事领域则强调安全性和可维护性。因此，信息系统的非功能质量属性取决于其具体领域和用途，需要根据需求来确定重要性和优先级。
-
-* > 中间件软件是一种在不同应用程序、系统或组件之间充当媒介或中介的软件层，它提供了多种功能和作用，以帮助这些应用程序或系统之间的通信和协作。以下是一些中间件软件的功能和作用的示例：
-  >
-  > 1. **消息传递**：消息中间件（如Apache Kafka、RabbitMQ、ActiveMQ）允许应用程序在分布式环境中异步发送和接收消息。这有助于解耦不同的组件，提高系统的可伸缩性和可维护性。例如，一个电子商务网站可以使用消息队列来处理订单，将订单传递给不同的处理模块，如库存管理和支付处理。
-  > 2. **数据缓存**：缓存中间件（如Redis、Memcached）用于存储和管理数据的快速访问副本，以减少对数据库或其他后端存储系统的访问次数，从而提高应用程序的性能和响应时间。例如，一个社交媒体应用可以使用缓存中间件来存储用户的个人资料信息，以降低用户数据的检索成本。
-  > 3. **负载均衡**：负载均衡中间件（如Nginx、HAProxy）用于分发来自客户端的请求到多个服务器或实例，以确保请求的平均分布，提高系统的可用性和性能。例如，一个在线新闻网站可以使用负载均衡来分发用户请求到多个Web服务器，以分散流量并防止单点故障。
-  > 4. **事务处理**：事务中间件（如Java Transaction API - JTA）用于管理分布式事务，确保在分布式系统中的多个操作是原子性的。这对于需要强一致性和数据完整性的应用程序非常重要，如银行交易系统或电信运营商的计费系统。
-  > 5. **安全性和身份验证**：安全中间件（如OAuth、LDAP）用于管理身份验证和授权，以确保只有授权的用户可以访问系统资源。例如，一个企业内部应用程序可以使用LDAP（轻型目录访问协议）来验证用户的身份，并限制对特定资源的访问权限。
-  > 6. **分布式计算**：分布式中间件（如Apache Hadoop、Apache Spark）用于管理分布式计算任务，将大规模数据处理分成小任务并在多个计算节点上执行，以加速数据分析和处理。这对于大数据应用和复杂分析非常有用。
-  >
-
-### 信息系统开发过程
-
-* 生命周期：
-  * 系统规划
-  * 系统开发
-  * 系统运行与维护
-
-![image-20230902110653467](https://img-blog.csdnimg.cn/af2e25d9df1d404e8075da0f81fb45f8.png)
-
-* 系统规划阶段和系统需求分析各阶段
-  * ![image-20230902110848482](https://img-blog.csdnimg.cn/5fc94c17c61642abbaea0d6789a15238.png)
-* 系统设计阶段
-  * ![image-20230902110955533](https://img-blog.csdnimg.cn/bdb57add321444ceadc7dcee71d607a2.png)
-* 系统构造阶段
-  * ![image-20230902111013452](https://img-blog.csdnimg.cn/b251bfd8b4a4441fab0581cca2f1fb05.png)
-* 系统测试阶段
-  * ![image-20230902111032645](https://img-blog.csdnimg.cn/e9efeab3418d4d26b760603569bdf66e.png)
-* 系统运行和维护阶段
-  * ![image-20230902111100593](https://img-blog.csdnimg.cn/b2d0f87b3e2c44d6846013c90450bd4d.png)
-* 问题探讨
-
-![image-20230902111115118](https://img-blog.csdnimg.cn/b67d32b23972416b8cf4988b4afb5369.png)
-
-### 系统开发过程模型
-
-#### 1.瀑布开发过程模型
-
-* 概述：
-
-> 系统开发活动严格按生命周期阶段线性顺序开展，并在每个阶段创建和提交大量文档
-
-* 特点
-
-![image-20230902111300724](https://img-blog.csdnimg.cn/75387a95af63495d862df74cf35c54b0.png)
-
-* 应用场景
-  * **适用于需求十分明确、规模较小的系统项目**
-
----
-
-
-
-
-
-#### 2.原型开发过程模型
-
-* 概述
-
-  > 仅基于初始需求，便可采取快速开发与工具，及早给出初始版本的模型。
-  >
-  > 用户反馈与新需求进入系统下一版本迭代开发，从而解决瀑布开发过程模型的局限
-
-![image-20230902111719066](https://img-blog.csdnimg.cn/05ec01c2d4dd4942ace9104db11d9f01.png)
-
-* 特点
-
-  > 真正能满足用户需求的信息系统，能够较快的提交系统的初始功能版本给用户使用
-  >
-  > 需求变更能够很快系统重得到反馈
-  >
-  > 系统项目开发难以标记进展的里程碑、项目管理复杂
-  >
-  > 若系统体系结构设计不健壮，多次迭代会使系统稳定性受到挑战
-  >
-  > 需要系统具有快速开发能力的工具支持
-
-  ![image-20230902112153298](https://img-blog.csdnimg.cn/616bcf318b8c4dccb8d1155bb41a6b6c.png)
-
-  
-
-* 应用场景
-
-  * 适用于有大量人机交互界面的系统项目，也适合需求初期不明确的系统项目
-
----
-
-#### 3.螺旋式开发过程模型
-
-* 也是一种金华迭代式的系统开发过程模型，它兼顾了原型开发过程的迭代特征和瀑布开发过程中的系统化与严格审核优点
-
-  * ![image-20230902112328089](https://img-blog.csdnimg.cn/a6d8b64a10324a26a4f512231d82d35f.png)
-
-* 特点
-
-  ![image-20230902112336927](https://img-blog.csdnimg.cn/f68373371a874502916a057da7a97619.png)
-
-  > 引入风险分析
-  >
-  > 迭代开发
-  >
-  > 成本代价高
-  >
-  > 管理更复杂，需要更多的组织管理
-
-  
-
-* 应用场景
-
-  * **适用于大型复杂的系统开发，特别强调系统开发的风险分析**
-
----
-
-####  4.统一软件开发过程模型RUP
-
-* 是一种用例驱动的、增量迭代的、以体系架构为中心的系统开发过程模型
-
-![image-20230902112918154](https://img-blog.csdnimg.cn/729f13ad0fb74879b23b4f145d780edb.png)
-
-* 特点
-
-![image-20230902112932353](https://img-blog.csdnimg.cn/163a2fa1228e4b58b7d2ffae3ffc23bd.png)
-
-> 面相对象，用例驱动，以架构为中心开发系统
->
-> 增量迭代开发，目标是质量控制和风险管理
->
-> 与UML配套、可定制流程框架
-
-* 应用场景
-  * 综合了多种模型的优点，全面考虑了系统开发的技术因素和管理因素，**适合于大型复杂系统开发**
-
----
-
-#### 5.敏捷开发过程模型
-
-* 一种精简的、快速的、增量迭代的模型
-
-![image-20230902113344415](https://img-blog.csdnimg.cn/b04b0574f2454f319ac6de55b615d4ef.png)
-
-* 特点
-
-  ![image-20230902113352237](https://img-blog.csdnimg.cn/c56e75b88afc47bd889f591e87732463.png)
-
-  > 面对面沟通、轻量级
-  >
-  > 注重开发过程中人的作用，缩化文档编写，快速发布系统版本
-  >
-  > 解决了成本高、周期长、难以适应快速雪球变更等问题
-
-* 应用场景
-
-  * 适用于**解决早起需求模糊或需求变更频繁的系统项目开发**，不适合大型项目系统开发
-
----
-
-* 问题探讨
-
-  ![image-20230902113642355](https://img-blog.csdnimg.cn/352d79017c184a488522c0a11e425a1f.png)
-
-### 系统开发方法与工具
-
-**系统开发策略**
-
-* **1.自行研发**
-
-  ![image-20230902114236130](https://img-blog.csdnimg.cn/08c3b18c182e4f1c8c89c32ffb897dc3.png)
-
-* **2.委托开发**
-
-  ![image-20230902114524557](https://img-blog.csdnimg.cn/2654e7c296504da281bff9a96c5ddd6a.png)
-
-* 3.购买商品软件
-
-  ![image-20230902114545075](https://img-blog.csdnimg.cn/f4d3104bf48f460ea39b47c2d2f35469.png)
-
-* 4.**联合开发**
-
-  ![image-20230902114559405](https://img-blog.csdnimg.cn/114b66c8c6d64ece8583701519f65d07.png)
-
----
-
-**系统开发方法**
-
-* **1.结构化方法**
-
-  ![image-20230902114647369](https://img-blog.csdnimg.cn/b8309568358e455f97aa217c37722123.png)
-
-  * 优缺点及现状
-
-    ![image-20230902114715730](https://img-blog.csdnimg.cn/9635f68b6cc34c19af3501a5da319e72.png)
-
-* **2.面向对象软件开发方法**
-
-  ![image-20230902114759905](https://img-blog.csdnimg.cn/441a67d9f9b542dab771a7aa967f9ae9.png)
-
-  * 优缺点及适合的软件项目类型
-
-![image-20230902114818243](https://img-blog.csdnimg.cn/99370f8cd16e49649faaa9afcef15769.png)
-
-* **3.基于构建软件开发方法**
-
-  ![image-20230902114858879](https://img-blog.csdnimg.cn/de60b27913154689910e55982da0283d.png)
-
-* **4.面相服务的系统开发**
-
-  ![image-20230902115004974](https://img-blog.csdnimg.cn/2c3ddc4bad894868b9e5d9bf21035c4c.png)
-
-* 
-
-
-
-
+1.信息系统生命周期
+
+* 系统规划
+* 系统开发
+  * 系统需求分析
+  * 系统设计
+  * 系统构造
+  * 系统测试
+* 系统运行与维护
+
+
+
+
+
+**2.系统开发过程模型**
+
+* 瀑布开发过程模型
+  * **严格按照生命周期阶段线性顺序开展，并在每个阶段都会创建和提交大量文档**
+  * 特点：
+    * 项目阶段划分明显，具有完整的开发文档支持，便于管理
+    * 需要大量的文档工作和审查工作
+    * 早期的错误往往需要到后期才能看到，反馈迟缓，带来项目风险
+    * 系统开发初期难以获得用户完整需求，导致瀑布开发过程难以展开
+  * 应用场景
+    * **适用于需求十分明确的、规模较小的系统项目**
+* 原型开发过程模型
+  * 特点
+    * 能较快的提交系统的初始功能版本给用户使用
+    * 系统变更能够较快的在系统中得到反馈
+    * 项目管理复杂
+  * 应用场景
+    * **原型开发适用于有大量人机交互界面的系统项目，也适合需求初期不太明确的系统项目**
+* 螺旋式开发过程模型
+  * 特点
+    * **引入了风险分析，使项目在无法排除重大风险时能停止**
+    * 项目进度会因为风险分析延后，成本增加
+    * 管理更复杂
+  * 应用场景
+    * **螺旋式开发模型适用于大型复杂的系统开发，特别强调系统开发的风险分析**
+* 统一软件开发过程**RUP**、
+  * 特点
+    * 面向对象、用例驱动，以架构为中心的开发系统
+    * 与UML配套、可定制流程框架
+  * 应用场景
+    * **全面考虑了系统开发的技术因素和管理因素，适用于大型复杂系统开发**
+
+* 敏捷开发
+  * 特点
+    * 强调编程人员与业务专家之间的紧密协作
+    * 注重人的作用，最小化文档编写
+  * 应用场景
+    * **适用于早期需模糊或需求变更频繁的系统开发项目**
 
 
 
 ## 第二章 面向对象建模语言
 
-
-
-
-
-### BPMN模型元素
+1.bpmn模型元素
 
 * 流对象
 
-  * 活动
+  * 活动：指在流程中执行的任何工作，即任务![image-20231225152906104](https://img-blog.csdnimg.cn/direct/a2115bb603404fa4871ba785d9b94995.png)
 
-    ![image-20230906185345253](https://img-blog.csdnimg.cn/af4fd660424b4ea18739130083885752.png)
+  * 事件：在业务流程中发生的任何事情![image-20231225153001847](https://img-blog.csdnimg.cn/direct/5d28db53beb044c3b18666db3bf82553.png)
+  * 网关：用于控制流程的分支![image-20231225153501091](https://img-blog.csdnimg.cn/direct/a5289c3ae86944a38a944099742f904f.png)
 
-  * 事件
-
-    ![image-20230906185547180](https://img-blog.csdnimg.cn/d8d6599f92724a3198137844378f6f20.png)
-
-  * 网关
-
-    ![image-20230906185555451](https://img-blog.csdnimg.cn/ab654e82a5a34ca4a94b89e4c33260c6.png)
-
-* 流：用于链接流对象，与流对象一起定义业务流程的过程
-
-  ![image-20230906193356250](E:\Typora\pictures\image-20230906193356250.png)
-
-* 数据：是值业务流程中的数据表示，具体又分为数据对象、数据对象集、数据输入和数据输出等
-
-* ![image-20230906193446835](E:\Typora\pictures\image-20230906193446835.png)
+* 流：用于丽娜姐流对象，与流对象一起定义业务流程的过程
+  * ![image-20231225154407033](https://img-blog.csdnimg.cn/direct/070dc2193f374738a84de2915b4d52b3.png)
+* 数据：是指业务流程中的数据表示，具体分为数据对象、数据对象集、数据输入和数据输出等![image-20231225154605281](https://img-blog.csdnimg.cn/direct/b0e06706f39f4dfc80fbf7dfb885d35b.png)
 
 * 人工制品：用以表示流程附加一些额外的信息，支持业务流程的过程说明
 
-  ![image-20230906193521669](E:\Typora\pictures\image-20230906193521669.png)
+![image-20231225154640531](https://img-blog.csdnimg.cn/direct/c6cd3474f79c49b695af300cb4528dfe.png)
 
-* 泳池与泳道：标识业务的各实体参与者活动及流程反胃。一个泳池可以包含多个泳道
+* 泳池与泳道![image-20231225154950448](https://img-blog.csdnimg.cn/direct/e59b26b87b7545cfaf2a3708a9881538.png)
 
-* ![image-20230906193625409](E:\Typora\pictures\image-20230906193625409.png)
+* 案例：
 
+  ![image-20231225155155825](https://img-blog.csdnimg.cn/direct/6f95e980988849d99e89bbcec796912f.png)
+
+  
+
+## 第三章 系统规划
+
+1.系统规划方法
+
+* 业务系统规划法 BSP![image-20231225161310599](https://img-blog.csdnimg.cn/direct/8c91ef3119b848778833c006b66a6f42.png)
+
+  * 核心思想：信息系统是为组织机构目标服务的，应满足组织机构各个管理层次的信息化要求
+  * 实施步骤![image-20231225160717444](https://img-blog.csdnimg.cn/direct/6b7374916e67468b9c2153f414e64764.png)
+  * BSP方法优缺点
+    * 保证信息系统独立于组织机构的管理体制
+    * 需要进行大量的工作活动，花费大量时间，才能有效的完成系统规划工作
+
+* 业务流程重组法 BPR
+
+  * ![image-20231225161300367](https://img-blog.csdnimg.cn/direct/4b36497f1a71497892af9a81f9526808.png)
+  * 优缺点：
+    * 解决机构内部纵向条块独立管理所带来的局限，利于机构改进业务流程的工作效率
+    * 脱离实际情况完全打破现有机构的业务流程可能会存在较大风险，遭遇多方面的阻力
+  * ![image-20231225162044287](https://img-blog.csdnimg.cn/direct/f21b37bc6c7d4dc3813cc1cbe1a4a9dc.png)
+
+* 价值链分析法 VCA
+
+  * ![image-20231225162112378](https://img-blog.csdnimg.cn/direct/2b7a0361aa0740e385f5a09ae7b59378.png)
+
+  * 优缺点
+    * ![image-20231225162226437](https://img-blog.csdnimg.cn/direct/6e9e245993df47df8e7ce8f3ea1723ab.png)
+
+* 战略目标集转移法 SST
+
+  * ![image-20231225162327575](https://img-blog.csdnimg.cn/direct/d081ca0a46f04e42a3362636c837fd53.png)
+
+* 关键成功因素法 KSF
+
+  * ![image-20231225162343434](https://img-blog.csdnimg.cn/direct/9c2b371f1ffb4696a283c5786c93af0c.png)
+
+  ![image-20231225162348504](https://img-blog.csdnimg.cn/direct/516a9283bb184d99af92b333cde89000.png)
+
+
+
+
+
+**2.任务活动排序**
+
+* 前导图：![image-20231225163033216](https://img-blog.csdnimg.cn/direct/695d94aae84e4aad81e3aad5bedf9c36.png)
+
+  * 前导图中节点之间的**依赖关系**
+
+    ![image-20231225163111983](https://img-blog.csdnimg.cn/direct/105ba728161146eaadaef02dae5f085a.png)
+
+  * 例题：![image-20231225163514638](https://img-blog.csdnimg.cn/direct/770c6543b1bc4134ba4a79a26ac74953.png)
+
+* **任务活动工期估算**
+
+  * 三点估计法![image-20231225164646331](https://img-blog.csdnimg.cn/direct/23ed70aa33b74e6daa91df98e3a83f2c.png)
+    * 例题![image-20231225164700457](https://img-blog.csdnimg.cn/direct/04a4f2b0ef674951b69ba959db3c7571.png)
+  * 德尔菲法![image-20231225164729803](https://img-blog.csdnimg.cn/direct/175ac3cb37a34d828b05a2db6fa09363.png)
+    * 例题![image-20231225164738180](https://img-blog.csdnimg.cn/direct/092470b121074e75b9db59c8a4008f8e.png)
+
+
+
+**3.项目进度安排**
+
+* 关键路径和关键任务![image-20231225164850905](https://img-blog.csdnimg.cn/direct/5950e8e858f04f6abb105825aae30a9f.png)
+* 甘特图![image-20231225164910916](https://img-blog.csdnimg.cn/direct/029506dd76ae48a4af989055f1798276.png)
+  * 例题![image-20231225164942415](https://img-blog.csdnimg.cn/direct/577a6b10749b468d9f542f55541d2167.png)
+* PERT图![image-20231225165002166](https://img-blog.csdnimg.cn/direct/2f408b6753d045a8b1714dd0b3f2bff5.png)
+  * 例题![image-20231225165200133](https://img-blog.csdnimg.cn/direct/b3b533b4a31047fe8abcc4294b7008a8.png)
+
+
+
+**4.分析题**
+
+* ![image-20231225165411697](https://img-blog.csdnimg.cn/direct/4b373b513cd340c6a489245574539342.png)
+* ![image-20231225165532057](https://img-blog.csdnimg.cn/direct/12500e7626f24a3ea3d58cf171740c90.png)
+
+
+
+## 第四章 系统需求分析
+
+1.系统用例图建模
+
+* **注意用例规约格式**
+
+  ![image-20231225165945832](E:\Typora\pictures\image-20231225165945832.png)
+
+
+
+2.非功能需求
+
+* 系统性能需求
+  * 响应时间
+  * 吞吐量
+  * 并发用户数
+  * 资源使用率![image-20231225172855240](https://img-blog.csdnimg.cn/direct/814fcc84237b48ed9f1b8685f1cc7df0.png)
+
+* 安全性需求
+* 可靠性需求
+* 操作性需求
+* 隐私需求
 * 
-
-
-
-
-
-
 
 
 
