--- a/马原/马原.md
+++ b/马原/马原.md
@@ -509,24 +509,24 @@
   * 时间是指物质运动的持续性，顺序性，特点是一维性。即时间的流逝一去不复返
   * 空间是指物质运动的广延性，伸张性，特点是三维性，即空间具有长、宽、高三方面的规定性
 
-2.马克思主义的物质观
+**2.马克思主义的物质观**
 
-* 世界是物质的世界，物质是第一性，物质不依赖于人类意识而存在，并能为人类的意识所反映的客观存在
+* 世界是物质的世界，**物质是第一性**，**物质不依赖于人类意识而存在，并能为人类的意识所反映的客观存在**
 
-* 坚持了唯物主义一元论，同唯心主义一元论和二元论划清了界限
-* 坚持了能动的反映论和可知论，批判了不可知论
-* 体现了唯物论和辩证法的统一，克服了形而上学唯物主义的缺陷
-* 体现了唯物主义自然观与唯物主义历史观的统一，为彻底的唯物主义奠定了理论基础
+* 坚持了**唯物主义一元论**，同唯心主义一元论和二元论划清了界限
+* 坚持了**能动的反映论和可知论**，批判了不可知论
+* 体现了**唯物论和辩证法的统一**，克服了形而上学唯物主义的缺陷
+* 体现了**唯物主义自然观与唯物主义历史观的统一**，为彻底的唯物主义奠定了理论基础
 
-3.物质和意识的辩证关系
+**3.物质和意识的辩证关系**
 
-* 物质决定意识，意识对物质的反作用
+* **物质决定意识，意识对物质的反作用**
 
   * **意识是客观世界的主观映像，物质对意识的决定作用表现在意识的起源、本质和作用上**
 
     * 从意识的起源：意识不仅是自然界长期发展的产物，而且是社会历史发展的产物
-    * 从意识的本质：意识是人脑这样一种特殊物质的机能和属性，是客观世界的主观映像
-    * 从意识的能动作用来看：
+    * 从意识的本质：意识是**人脑这样一种特殊物质的机能和属性，是客观世界的主观映像**
+    * 从意识的**能动作用来看**：
       * 意识具**有目的性和计划性**。人的整个实践过程，就是围绕意识活动所构建的目标和蓝图进行的
       * 意识具**有创造性**
       * 意识具**有指导实践改造客观世界的作用**
@@ -534,29 +534,34 @@
 
     ![image-20231219213537526](https://img-blog.csdnimg.cn/direct/f24492b8d85449c897b2514064eccb9f.png)
 
-4.主观能动和客观规律的辩证统一
+* **主观能动和客观规律的辩证统一**
 
-* 处理好主观能动性和客观规律性的关系是正确认识和把握物质与意识的辩证关系的前提
-  * 尊重客观规律是充分发挥主观能动性的前提
-  * 只有充分发挥主观能动性，才能争取认识和利用客观规律
-  * 客观规律与主观能动性统一的基础是**实践**
-* 正确发挥人的主观能动性，有以下三个方面的前提和条件：
-  * 从实际出发是正确发挥人的主观能动性的前提
-  * **实践**是正确发挥人的主观能动性的前提
-  * 一切物质条件和物质手段
+  * **处理好主观能动性和客观规律性的关系是正确认识和把握物质与意识的辩证关系的前提**
+    * 尊重客观规律是充分发挥主观能动性的前提
+    * 只有充分发挥主观能动性，才能争取认识和利用客观规律
+    * 客观规律与主观能动性统一的基础是**实践**
 
-5.世界的物质统一性
+  * **正确发挥人的主观能动性**，有以下三个方面的前提和条件：
+    * **从实际出发**是正确发挥人的主观能动性的前提
+    * **实践**是正确发挥人的主观能动性的前提
+    * 一切物质条件和物质手段
+
+* 意识与人工智能
+
+![image-20231224161400195](https://img-blog.csdnimg.cn/direct/fb6e825c1bcc44b294cf609049c2a556.png)
+
+**4.世界的物质统一性**
 
 * 世界的物质统一性在于它的**物质性**，**世界统一于物质**
   * 世界统一于物质的表现
-    * 自然界是物质的
-    * 人类社会本质上也是物质的
-    * 人的意识统一于物质
+    * **自然界是物质的**
+    * **人类社会本质上也是物质的**
+    * **人的意识统一于物质**
   * 世界统一于物质的**原理的意义**
     * **世界的物质统一性原理是辩证唯物主义最基本、最核心的观点，是马克思主义的基石**
-    * 有助于我们确立正确的思想路线和思想方法，在认识世界和改造世界的过程中，遵循一切从实际出发，实事求是的原则
+    * 有助于我们确立正确的思想路线和思想方法，在认识世界和改造世界的过程中**，遵循一切从实际出发，实事求是的原则**
 
-7.事物的联系与发展
+5.事物的联系与发展
 
 * 联系的特点
   * 客观性
@@ -565,9 +570,11 @@
   * 条件性
 
 * 事物的发展变化
+  * 变化泛指事物发生的一切改变，**发展则是事物变化中前进的、上升的运动**
   * 发展的实质是新事物的产生和旧事物的灭亡
+  
 
-6.==对立统一规律==
+**6.==对立统一规律==**
 
 * 对立统一规律是**唯物辩证法的实质和核心**，提供了矛盾分析方法，这是人们认识改造世界的根本方法
 
@@ -575,8 +582,8 @@
 
   * 矛盾的同一性
     * 指矛盾着的对立面**相互依存、相互贯通**的性质和趋势，有两方面含义
-      * 矛盾着的对立面相互依存，互为存在的前提，并处于一个统一体中
-      * 矛盾着的对立面相互贯通，在一定条件下可以相互转化
+      * 矛盾着的对立面**相互依存，互为存在的前提**，**并处于一个统一体中**
+      * 矛盾着的对立面**相互贯通，在一定条件下可以相互转化**
   * 矛盾的斗争性
     * 指矛盾着的对立面**相互排斥，相互分离**的性质和趋势
     * 由于矛盾的性质不同，矛盾的斗争性也不同，可以分为对抗性矛盾和非对抗性矛盾
@@ -590,9 +597,32 @@
 
 * 二者作用
 
+  * 同一性作用：
+    * **同一性是事物存在和发展的前提**。在矛盾双方中，**一方的发展以另一方的发展为条件，发展是在矛盾统一体中的发展**
+    * **同一性使矛盾双发相互吸引有利于自身的因素，在相互作用中各自得到发展**
+    * 同一性规定着事物转化的可能和发展的趋势
+  
+  * 斗争性的作用：
+    * 矛盾双方的斗争性促进矛盾双方力量变化，警长增高，此消彼长，**造成矛盾双方力量发展的不平衡，为对立面的转化、事物的质变创造条件**
+    * **矛盾双方的斗争性是一种矛盾统一体向另一种矛盾统一体过渡的决定力量**。矛盾双方相互排斥和否定促使旧的矛盾统一体破裂，新的矛盾统一体产生，**旧事物发展为新事物**
+  
+  
   ![image-20231219221022017](https://img-blog.csdnimg.cn/direct/707e3f7d10764507a5f6c831d8a1ef7c.png)
 
-7.==量变质变规律==
+* 矛盾的普遍性和特殊性及其相互关系
+  * 二者含义：
+    * 矛盾的普遍性是指矛盾存在于一切事物中，**存在于一切事物发展过程的始终，旧的矛盾解决了，新的矛盾又产生了，事物始终在矛盾中运动**
+    * **矛盾的特殊性是指各个具体事物的矛盾，每一个矛盾的各个方面在发展不同阶段上各有其特点**。具体有三种形态
+      * **不同事物的矛盾**各有其特点
+      * **同一事物的矛盾在不同的发展过程和发展阶段**各有不同特点
+      * **构成事物的诸多矛盾以及每一矛盾的不同方面各有不同性质、地位和作用**
+  * 二者关系-辩证统一
+    * **矛盾的普遍性是矛盾的共性，特殊性是矛盾的个性。共性是无条件的、绝对的，个性是有条件的、相对的**
+    * **任何现实存在的矛盾都是个性和共性的有机统一。共性寓于个性之中，没有离开个性的共性，也没有离开共性的个性。**
+
+
+
+**7.==量变质变规律==**
 
 * 质：事物区别于其他事物的内在规定性
 * 量：事物的规模、程度、速度等用数量关系表示的规定性
@@ -601,35 +631,39 @@
   * 量变是保持事物稳定性的不显著变化，体现了事物发展渐进过程的连续性
   * 质变是事物性质的根本变化 ，是事物由一种质态向另一种质态的飞跃，体现了事物发展渐进过程和连续性的中断
 * 两者的**辩证关系**
-  * 量变是质变的必要准备
-  * 质变是量变的必然结果，并为新的量变开辟道路
-  * 质变和质变相互渗透
-    * 总的量变过程中也有阶段性和局部性的部分质变
-    * 在质变过程中也有旧质在量上的收缩和新质在量上的扩张
-    * 质变量变是**相互依存、相互贯通的**。量变质变规律体现了事物发展的渐进性和飞跃性的统一
+  * **量变是质变的必要准备**
+  * **质变是量变的必然结果**，并为新的量变开辟道路
+  * **质变和质变相互渗透**
+    * **总的量变过程中也有阶段性和局部性的部分质变**
+    * **在质变过程中也有旧质在量上的收缩和新质在量上的扩张**
+    * 质变量变是**相互依存、相互贯通的**。**量变质变规律体现了事物发展的渐进性和飞跃性的统一**
+* 方法论意义
+  * 事物的发展处在量变阶段时，要踏踏实实做好日常工作，为未来重要改变做准备
+  * 质变来临时，要果断地、不失时机的抓住机遇，促成质变，使工作迈上新台阶
 
-8.==否定之否定规律==
+
+**8.==否定之否定规律==**
 
 * 含义
 
   ![image-20231219223000863](https://img-blog.csdnimg.cn/direct/273da076d07e4851b50a68177d4913d0.png)
 
-* 辩证否定观的基本内容
+* **辩证否定观**的基本内容
 
-  * 否定是事物的**自我否定**、自我发展，是事物内部矛盾运动的结果
+  * 否定是事物的**自我否定**、自我发展，**是事物内部矛盾运动的结果**
   * 否定是**事物发展的环节**，是旧事物向新事物转变，旧质到新质的飞跃，只有经过否定，旧事物才能向新事物转变
-  * 否定是新旧事物联系的环节
-  * 辩证否定的实质是**“扬弃”**，即新事物对旧事物的既批判又继承，既克服其消极因素又保留其积极因素
+  * **否定是新旧事物联系的环节**，新事物孕育产生旧事物，新旧事物是通过否定环节联系起来的
+  * 辩证否定的实质是**“扬弃”**，即**新事物对旧事物的既批判又继承，既克服其消极因素又保留其积极因素**
 
 * 辩证发展的三个阶段
 
   * 肯定-否定-否定之否定
-  * 第一次否定使得问题初步解决，但仍具有片面性，还要经过再次否定，实现对立面的统一，使矛盾得到根本解决
-  * 事物的发展呈现出周期性，不同周期的交替使事物发展呈现波浪式前进或螺旋式上升的总趋势
+  * **第一次否定使得问题初步解决，但仍具有片面性，还要经过再次否定**，实现对立面的统一，使矛盾得到根本解决
+  * 事物的发展呈现出**周期性**，不同周期的交替**使事物发展呈现波浪式前进或螺旋式上升的总趋势**
 
 * 指导意义：
 
-  * 树立辩证的否定观，反对形而上学的肯定或否定一切。采取科学分析的方法
+  * 树立辩证的否定观，**反对形而上学的肯定或否定一切**。采取科学分析的方法
   * **既要看到道路的曲折，更要看到前途的光明**
 
 9.唯物辩证法的本质特征和认识功能
@@ -640,7 +674,7 @@
   * 客观辩证法是指客观事物或客观存在的辩证法，采取外部必然性形式
   * 主观辩证法是指人类认识和思维运动的辩证法，采取主观的、逻辑的形式
 
-10.辩证思维的方法与现代科学思维方法
+**10.辩证思维的方法与现代科学思维方法**
 
 * 辩证思维的方法
 
@@ -652,13 +686,43 @@
 
   * 逻辑与历史相统一
 
+![image-20231224193311735](E:\Typora\pictures\image-20231224193311735.png)
+
 * 现代科学思维方法
 
   * 现代科学思维方法主要包括控制、信息、系统、模型、理想化方法
   * 两者在方法论上有共性，二者相互联系、相互补充
   * 现代科学思维方法论前提是辩证思维，现代科学思维方法论丰富了辩证思维方法，以其为指导
 
- 
+ **11.联系和发展的基本环节(唯物辩证法的五大范畴)**
+
+* **内容与形式**
+
+![image-20231224192726346](https://img-blog.csdnimg.cn/direct/111c14cc79f64387ba9fee9fbbcff012.png)
+
+* **本质与抽象**
+
+![image-20231224192756694](https://img-blog.csdnimg.cn/direct/c267167e51ef44fd8fca3f511bec3330.png)
+
+* **原因与结果**
+
+![image-20231224192825824](https://img-blog.csdnimg.cn/direct/b0a3349a8952409f907ead3e85ff09a5.png)
+
+* **必然与偶然**
+
+![image-20231224192839839](https://img-blog.csdnimg.cn/direct/2bca42fff02745898bbe737e90388d47.png)
+
+* **现实与可能**
+
+![image-20231224192846657](https://img-blog.csdnimg.cn/direct/c4d05bdfa338459799f41f213e762c05.png)
+
+
+
+
+
+
+
+
 
 
 
@@ -672,9 +736,9 @@
 
 ![image-20231220171151934](https://img-blog.csdnimg.cn/direct/b317964c660e494ab03864c864a850c2.png)
 
-1.实践的本质和特征
+**1.实践的本质和特征**
 
-* 本质：实践的**本质是人类能动地改造世界的社会性的物质活动**
+* 本质：**实践的本质是人类能动地改造世界的社会性的物质活动**
 
 * 特征：
 
@@ -710,7 +774,7 @@
 
 
 
-3.实践对认识的决定作用
+**3.实践对认识的决定作用**
 
 * **实践是认识的来源**
   * 认识的内容是在实践活动的基础上产生和发展的。只有通过实践实际的改造和变革对象，才能准备把握对象的属性、本质和规律
@@ -739,38 +803,44 @@
   * 把**实践**的观点引入认识论
   * 把**辩证法应用于反映论**考察**认识发展**过程
 
-5.从实践到认识、从认识到实践
+**5.从实践到认识、从认识到实践**
 
 * 认识的辩证运动经过从实践到认识和从认识到实践两个基本环节。
 
 * **从实践到认识**
-  * 首先要经过感性认识和理性认识
+  
+  * **首先要经过感性认识和理性认识**
   * 感性认识：
     * 感性认识是人们在实践基础上，由感觉器官直接感受到的关于事物的现象、事物的外部联系、事物的各个方面的认识，包括感觉、知觉和表象
-    * 感性认识具有不深刻的局限性，必须进一步上升到理性认识
+    * **感性认识具有不深刻的局限性，必须进一步上升到理性认识**
   * 理性认识：
-    * 是指人们借助抽象思维，在整理概括大量感性材料的基础上，达到关于事物的本质、全体、内部联系和事物自身规律性的认识
-    * 作为认识的高级阶段，理性认识具有抽象性和间接性的特点
+    * 是指**人们借助抽象思维**，在整理概括大量感性材料的基础上，**达到关于事物的本质、全体、内部联系和事物自身规律性的认识**
+    * 作为认识的高级阶段，**理性认识具有抽象性和间接性的特点**
   * **二者的辩证统一关系**是在实践的基础上形成的，也需要在实践中发展
-    * 理性认识依赖于感性认识
-    * 感性认识有待于发展和深化成为理性认识
-    * 感性认识和理性认识相互渗透，相互包含
+    * **理性认识依赖于感性认识**
+    * **感性认识有待于发展和深化成为理性认识**
+    * **感性认识和理性认识相互渗透，相互包含**
   * 感性认识上升到理性认识的**两个基本条件**
-    * 投身实践、深入调查，获取十分丰富和合乎逻辑的感性材料
-    * 必须发挥思考的作用，运用理论思维和科学抽象，将丰富的感性材料去粗取精
+    * **投身实践**、深入调查，获取十分丰富和合乎逻辑的感性材料
+    * 必须**发挥思考的作用**，运用理论思维和科学抽象，将丰富的感性材料去粗取精
 * **从认识到实践**
+  
   * **从认识到实践是认识过程的第二次能动飞跃**
   * 从认识到实践具有必要性和重要性
-    * 从实践来看，认识世界的目的是改造世界，从感性认识上升到理性认识的第一次飞跃，只有从感性认识上升到理性认识，才能把握事物的本质和规律，满足实践的需要
-    * 从认识来看，认识的真理性只有在实践中才能得到检验和发展。只有将获得的理性认识运用到实践中去，才能检验其正确与否
-
+    * **从实践来看，认识世界的目的是改造世界**，从感性认识上升到理性认识的第一次飞跃，只有从感性认识上升到理性认识，才能把握事物的本质和规律，满足实践的需要
+    * **从认识来看**，**认识的真理性只有在实践中才能得到检验和发展**。只有将获得的理性认识运用到实践中去，才能检验其正确与否
+  
 * **实践-认识-再实践-再认识**，循环往复以至于 无穷的辩证发展过程
 
   ![image-20231220200823776](https://img-blog.csdnimg.cn/direct/1277ca0e2a1c42199a3752f4e6fa82cc.png)
 
-6.真理的客观性、绝对性和相对性
+---
 
-* 真理的客观性
+**真理与价值**
+
+**6.真理的客观性、绝对性和相对性**
+
+* **真理的客观性**
   * 真理的内容是对客观事物及其规律的正确反映，真理中包含着不依赖于人和人的意识的客观内容。**客观性是真理的本质属性**
 * 真理的形式是主观的
   * 真理通过感觉、知觉、表象等主观形式表达出来。真理的主观形式是一切认识所固有的
@@ -778,7 +848,7 @@
 * 真理的一元性
   * 在同一条件下对于特定的认识客体的真理性认识只有一个**，真理的客观性决定了真理的一元性**
 
-7.真理的绝对性和相对性
+**7.真理的绝对性和相对性**
 
 ![image-20231220202016307](https://img-blog.csdnimg.cn/direct/6495a284e9b841599dc0e321430d4690.png)
 
@@ -794,7 +864,7 @@
   * 实践具有直接现实性的特点
     * 实践能把一定认识、理论变成直接的、现实的
 
-10.真理与价值的辩证统一
+**10.真理与价值的辩证统一**
 
 * 价值的基本特性
   * 主体性
@@ -802,7 +872,7 @@
   * 多维性
   * 社会历史性
 
-11.认识世界和改造世界相结合
+**11.认识世界和改造世界相结合**
 
 * 二者含义
   * 认识世界，就是**主体能动地反映客体**，获得关于事物本质和发展规律的科学知识
@@ -814,11 +884,11 @@
 * 认识世界和改造世界是一个矛盾的过程
 * ![image-20231220211207833](https://img-blog.csdnimg.cn/direct/e44546c1dc784ff8937a314f24475401.png)
 
-12.改造客观世界和改造主观世界的辩证关系
+**12.改造客观世界和改造主观世界的辩证关系**
 
 ![image-20231220211318155](https://img-blog.csdnimg.cn/direct/fd9325c848fc44a79de0e17581987dfa.png)
 
-* 认识世界和改造世界的过程是从必然走向自由的过程
+* **认识世界和改造世界的过程是从必然走向自由的过程**
 
   ![image-20231220212246377](https://img-blog.csdnimg.cn/direct/0358ec3f30f841619d62560d1919df9b.png)
 
@@ -830,6 +900,15 @@
 
 ![image-20231221093531169](https://img-blog.csdnimg.cn/direct/8c525849397f49778463fd50bd99c436.png)
 
+**两种根本对立的历史观**
+
+* 唯心史观
+  * 从社会意识决定社会存在的前提出发，虽然考察了人的活动的思想动机，但是没有进一步考究思想动机背后的物质动因和经济根源，**根本不懂得社会历史的客观规律，根本不懂得人民群众在社会历史发展中的决定作用**
+* 唯物史观
+  * **社会存在决定社会意识**。物质生活的生产方式制约着整个社会生活，政治生活和精神生活的过程
+
+
+
 1.社会存在与社会意识
 
 * 社会存在
@@ -840,7 +919,7 @@
     * **人口因素**
       * 对社会发展有制约和影响作用
     * **物质生产方式**
-      * 是社会存在和发展的基础及决定力量
+      * **是社会存在和发展的基础及决定力量**
   * ![image-20231221094220299](https://img-blog.csdnimg.cn/direct/bfe56e410b284d02b528237ab8b86776.png)
 
 * 社会意识
@@ -867,21 +946,21 @@
 
     样，具有相对独立性。 
 
-2.社会存在和社会意识的辩证关系
+**2.社会存在和社会意识的辩证关系**
 
 * **社会存在决定社会意识**
   * 社会存在是社会意识内容的**客观来源**，社会意识是社会物质生活过程及其条件的**主观反映**。**社会意识根源于社会存在**，是对**以实践为基础**的不断变化发展的现实世界的反应
-  * 社会意识是人们不断进行社会物质交往的产物
-  * 社会意识是具体的、历史的
+  * **社会意识是人们不断进行社会物质交往的产物**
+  * **社会意识是具体的、历史的**
 * **社会意识有相对独立性**
-  * 社会意识与社会存在发展的不完全同步性和不平衡性
+  * **社会意识与社会存在发展的不完全同步性和不平衡性**
   * 社会意识内部各种形式之间相互影响及各自具有的历史继承性
-  * 社会意识对社会存在具有能动的反作用
+  * **社会意识对社会存在具有能动的反作用**
 
 3.社会存在和社会意识辩证关系的重要意义
 
 * 理论意义：
-  * 唯物史观认为：社会存在决定社会意识，社会意识能动地反作用于社会存在
+  * 唯物史观认为**：社会存在决定社会意识，社会意识能动地反作用于社会存在**
   * 不仅在人力思想史上**第一次正确的回答了社会历史基本问题，而且宣告了唯心史观的彻底破产，解释了人类社会发展的规律**
 * 实践意义：
   * 对于社会发展包括社会文化建设具有重要指导意义。对于社会发展的重要作用表现在：
@@ -892,7 +971,7 @@
 
 
 
-4.社会基本矛盾及其运动规律
+**4.社会基本矛盾及其运动规律**
 
 * 人类社会的**基本矛盾**
 
@@ -905,7 +984,7 @@
     * 含义
 
       * 具有客观历史性和社会历史性
-      * 生产力的水平表现为生产发展的现实程度
+      * **生产力的水平表现为生产发展的现实程度**
 
       * **科学技术**是先进生产力的集中体现和主要标志，是第一生产力
 
@@ -919,18 +998,17 @@
   * 生产关系
 
     * 含义
-      * 生产关系是人们在物质生产过程中形成的**不以人的意志力为转移的经济关系**
+      * 生产关系是人们在**物质生产过程中形成的不以人的意志力为转移的经济关系**
       * **是社会关系中最基本的关系**，政治关系、家庭关系等其他社会关系都要受生产关系的支配和制约
     * 类型
       * 以生产资料公有制为基础的生产关系
       * 以生产资料私有制为基础的生产关系
 
-  * 生产关系作为一种社会关系，具有其自身的特征。
-
+  * **生产关系作为一种社会关系，具有其自身的特征。**
     * 第一，生产关系形成于人类的生产实践活动之中，是人们的物质生产活动以及个体活动所借以实现的形式，实际上是人的本质力量的社会实现形式。
     * 第二，生产关系是生产力的社会存在形式，具有相对的稳定性。
     * 第三，生产关系是一种客观的经济关系，具有客观性
-
+  
 * **经济基础与上层建筑之间的矛盾及其规律**
 
   * 经济基础
@@ -955,7 +1033,7 @@
 
 
 
-5.生产力和生产关系的辩证关系
+**5.生产力和生产关系的辩证关系**
 
 * **生产力决定生产关系**
 
@@ -975,39 +1053,40 @@
 **6.社会形态更替的一般规律及其特殊形式**
 
 * 社会形态的内涵
-  * 社会形态是关于社会运动的具体形式、发展阶段和不通质态的范畴，是同生产力发展到一定阶段相适应的经济基础和上层建筑的统一体
-  * 社会形态包括社会的经济形态、政治形态和意识形态，是三者具体的、历史的统一
-  * 一定的社会形态总要以一定的社会制度形式呈现出来
+  * **社会形态是关于社会运动的具体形式、发展阶段和不通质态的范畴**，是同生产力发展到一定阶段相适应的经济基础和上层建筑的统一体
+  * **社会形态包括社会的经济形态、政治形态和意识形态，**是三者具体的、历史的统一
+  * **一定的社会形态总要以一定的社会制度形式呈现出来**
 * 社会形态更替的统一性和多样性
-  * 统一性：一句生产关系的不同性质，社会历史可划分为五种社会形态：
-    * 原始社会、奴隶社会、封建社会、资本主义社会和社会主义社会
+  * 统一性：依据生产关系的不同性质，社会历史可划分为五种社会形态：
+    * **原始社会、奴隶社会、封建社会、资本主义社会和共产主义社会**
   * 多样性：就某一国家或民族的社会发展历程而言，情况不同，体现了社会形态更替形式的多样性
   * 统一性和多样性是辩证统一的
 
 ![image-20231221110405280](https://img-blog.csdnimg.cn/direct/f2d553746e08433384164e5c97e4d76a.png)
 
-* 社会形态更替的必然性与人们的历史选择性
+* **社会形态更替的必然性与人们的历史选择性**
   * 客观必然性主要是是指社会形态一次更替的过程和规律是客观的
   * 生产力的发展具有最终决定意义
   * 历史选择性包含三层意思
-    * 社会发展的客观必然性造成了一定历史阶段社会发展的基本趋势，为人们的历史选择提供基础、饭盒和可能性空间
-    * 社会形态更替的过程也是一个主观能动性与客观规律性相统一的过程
-    * 人们的历史归根结底是人民群众的选择
+    * **社会发展的客观必然性造成了一定历史阶段社会发展的基本趋势，为人们的历史选择提供基础、范围和可能性空间**
+    * **社会形态更替的过程也是一个主观能动性与客观规律性相统一的过程**
+    * **人们的历史归根结底是人民群众的选择**
 * 社会形态更替的前进性与曲折性
-  * 社会形态更替表现为历史的前进性与曲折性、顺序性与跨越性的统一
-    * 前进性与曲折性主要是指五种社会形态依次演进的基本趋势，其历史过程是“扬弃”的过程，并不否认历史发展的曲折性和跨越性
+  * **社会形态更替表现为历史的前进性与曲折性、顺序性与跨越性的统一**
+    * 前进性与曲折性主要是指五种社会形态依次演进的基本趋势，**其历史过程是“扬弃”的过程，并不否认历史发展的曲折性和跨越性**
 
 ![image-20231221112059148](https://img-blog.csdnimg.cn/direct/8daf7e596d1c462a8b2f8fd46ae50480.png)
 
 
 
-7.社会基本矛盾在历史发展中的作用
+**7.社会基本矛盾在历史发展中的作用**
 
 * **社会基本矛盾是历史发展的根本动力**
-  * 生产力是社会基本矛盾运动中最基本的动力因素，是人类社会发展和进步的最终决定力量
-  * 社会基本矛盾特别是生产力和生产关系的矛盾，是一切历史冲突的根源，决定着社会中其他矛盾的存在和发展
-  * 社会基本矛盾有不同的表现形式和解决方式，并从根本上影响和促进社会形态的变化发发展
-
+  
+  * **生产力是社会基本矛盾运动中最基本的动力因素，是人类社会发展和进步的最终决定力量**
+  * **社会基本矛盾特别是生产力和生产关系的矛盾，是一切历史冲突的根源，决定着社会中其他矛盾的存在和发展**
+  * 社会基本矛盾有不同的表现形式和解决方式，并从根本上影响和促进社会形态的变化发展
+  
 * 社会主要矛盾在历史发展中的作用
 
   ![image-20231221113516576](E:\Typora\pictures\image-20231221113516576.png)
@@ -1091,41 +1170,41 @@
 
 * 含义：
   * 商品是用来**交换**、能满足人的某种需要的**劳动产品**，具有**价值**和是**使用价值**两种属性，是价值和使用价值的矛盾统一体
-* 商品的二因素：
-  * 使用价值：
+* **商品的二因素：**
+  * **使用价值：**
     * 实质商品能满足人的某种需要的有用性，反应的是**人与自然**的物质关系，**是商品的自然属性**，是一切劳动产品的共有的属性。使用价值构成社会财务的物质承担，是**交换价值的物质承担者**
-  * 价值：
+  * **价值**：
     * 指凝结在商品中的无差别的一般人类劳动，即**人的脑力和体力的耗费**
     * 价值**是商品所特有的社会属性**。价值是交换价值的基础，交换价值是价值的表现形式。
     * 商品的价值在本质上体现的了**生产者之间一定的社会关系**
-* 劳动的二重性
+* **劳动的二重性**
   * 具体劳动：是指生产一定使用价值的具体的劳动形式。**具体劳动创造了商品的使用价值**
   * 抽象劳动：是指撇开一切具体形式的、无差别的一般人类劳动**。即人的脑力和体力的耗费。抽象劳动形成商品的价值**
   * 具体劳动和抽象劳动是同一劳动的两种规定。任何一种劳动，一方面是具体劳动，另一方面又是一般的抽象劳动，这就是劳动二重性。
   * **劳动的二重性决定商品的二因素**
-* 具体劳动和抽象劳动也是对立统一的关系
+* **具体劳动和抽象劳动也是对立统一的关系**
   * 具体劳动和抽象劳动是商品生产者的同一劳动过程中不可分割的两个方面，**二者在时间上和空间上是统一的**
   * 具体劳动与抽象劳动分别反应了劳动的不同属性。具体劳动所反映的是人与自然的关系，是劳动的自然属性，抽象劳动反应的是人与社会的关系，是劳动的社会属性
 
 
 
-3.商品价值量
+3.**商品价值量**
 
-* 社会必要劳动时间决定商品价值量
+* **社会必要劳动时间决定商品价值量**
 * 社会必要劳动时间是指在现有的社会正常的生产条件下，在社会平均的劳动熟练程度和劳动强度下制造某种使用价值所需要的劳动时间
 * 商品的价值量与生产商品所耗费的**社会必要劳动时间成正比，与劳动生产率成反比**
 
 
 
-4.价值形式的发展与货币的产生
+4.**价值形式的发展与货币的产生**
 
-* 商品价值形式的发展经历的四个阶段
+* **商品价值形式的发展经历的四个阶段**
   * 简单或偶然的价值形式
   * 总和的或扩大的价值形式
   * 一般价值形式
   * 货币形式
 
-5.货币的五种职能
+5.**货币的五种职能**
 
 * 价值尺度
 * 流通手段
@@ -1133,22 +1212,22 @@
 * 贮藏手段
 * 世界货币
 
-6.价值规律及其作用
+**6.价值规律及其作用**
 
 * 价值规律是商品生产和交换的基本规律
   * 内容：
-    * 商品的价值量由生产商品的社会平均必要劳动时间决定。商品交换以价值量为基础，按照等价(等价值)交换的原则
-  * 表现形式：
+    * **商品的价值量由生产商品的社会平均必要劳动时间决定。商品交换以价值量为基础，按照等价(等价值)交换的原则**
+  * **表现形式：**
     * 商品的价格围绕商品的价值自发的波动
-  * 作用：
+  * **作用：**
     * 积极作用：
-      * 自发地调节生产资料和劳动力在社会各生产部门之间的分配比例
-      * 自发地刺激社会产出力的发展
-      * 自发地条件社会收入的分配
+      * **自发地调节生产资料和劳动力在社会各生产部门之间的分配比例**
+      * **自发地刺激社会生产力的发展**
+      * **自发地调节社会收入的分配**
     * 消极作用：
-      * 价值规律调节的自发性和滞后性可能导致社会资源的浪费
-      * 导致垄断发生，阻碍技术进步
-      * 导致收入两极分化
+      * **价值规律调节的自发性和滞后性可能导致社会资源的浪费**
+      * **导致垄断发生，阻碍技术进步**
+      * **导致收入两极分化**
 
 * 在现实生活中，价值规律对生产和交换活动的支配作用是通过价格运动表现出来的。按照价值规律的要求，商品价格的确定是以商品价值为基础的。但是，这并不意味着每一次具体的商品交换都是等价交换。商品供求关系的不平衡，使得商品的价格与价值经常不一致，但这不仅不违背价值规律，相反正是价值规律发生作用的表现形式。其原因在于： 
   * 从商品交换的总体和较长时期来看，**价格的上涨部分和下落部分可以相互抵消**，因而一定时期之内商品的平均价格与价值是相等的， 价格与价值是趋于一致的； 
@@ -1156,11 +1235,11 @@
 
 
 
-7.以私有制为基础的商品经济的基本矛盾
+7.**以私有制为基础的商品经济的基本矛盾**
 
-* 商品生产者的劳动：
+* **商品生产者的劳动**：
   * 以私有制为基础的商品经济中，商品生产者的劳动既是具有社会性质的**社会劳动，这是由社会分工决定的**；又是具有私人性质的**私人劳动，这是由生产资料私有制决定的**
-* 私有制经济的基本矛盾：
+* **私有制经济的基本矛盾**：
   * **私人劳动和社会劳动的矛盾**构成私有制商品经济的**基本矛盾**，这一矛盾贯穿商品经济发展过程的始终，决定商品经济的各种内在矛盾及其发展趋势。
     * 私人劳动和社会劳动的矛盾**决定着商品经济的本质及其发展过程**
     * 私人劳动和社会劳动的矛盾**是商品经济其他一切矛盾的基础**
@@ -1176,13 +1255,13 @@
 
  9.**劳动力成为商品与货币转化为资本**
 
-* 劳动力成为货币
+* **劳动力成为货币**
   * 劳动力是指人的劳动能力，人的脑力和体力的总和。劳动力成为商品，**标志着简单商品生产发展到资本主义商品生产的新阶段**
-  * 劳动力成为货币的两个基本条件
+  * **劳动力成为货币的两个基本条件**
     * 劳动者是法律上的自由人，能够把自己的劳动力当做商品来支配
-    * 劳动者没有任何生产资料，没有生活资料来源，因而不得不依靠出卖劳动力为生
-* 劳动力商品的特点
-  * 劳动力价值包括三个部分
+    * **劳动者没有任何生产资料，没有生活资料来源，因而不得不依靠出卖劳动力为生**
+* **劳动力商品的特点**
+  * **劳动力价值包括三个部分**
     * 维持劳动者生存所必须的生活资料的价值
     * 维持劳动者家属的生存所必须的生活资料的价值
     * 劳动者接受教育和训练所指出的费用
@@ -1199,14 +1278,14 @@
   * 劳动过程：
     * 是运用劳动资料对劳动对象进行加工，改变自然界的物质形态，创造出满足人们某种需要的使用价值的过程。包括三要素：
       * 劳动者的劳动、劳动对象和劳动资料
-  * 价值增值过程是超过劳动力价值的补偿点而延长了价值形成过程
-* 剩余价值率
+  * **价值增值过程是超过劳动力价值的补偿点而延长了价值形成过程**
+* **剩余价值率**
   * 资本在剩余价值中采取生产资料和劳动力两种形态，根据这两部分资本在剩余价值中所起的不同作用，可以将资本区分为：
     * 不变资本(c)，是指**以生产资料形式存在的资本**。其在生产过程中只转变自己的物质形态而不改变自己的价值量，不发生增值
-    * 可变资本(v)，是用**来购买劳动力的那部分资本**，在生产过程中，工人能够创造新的价值，发生价值增值
+    * 可变资本(v)，是用**来购买劳动力的那部分资本**，在生产过程中，工人能够创造新的价值，发生价值增值，**即工人的工资**
   * **雇佣劳动者的剩余劳动是剩余价值的唯一源泉**
   * 确定资本家对工人的剥削程度：
-    * m' = m / v
+    * **m' = m / v**
       * m' 为剩余价值率，m为剩余价值，v为可变资本
     * 剩余价值率还可以用剩余劳动与必要劳动的比率，或者剩余劳动时间或与必要劳动时间的比率来表示
     * m' = 剩余劳动时间 / 必要劳动时间 = 剩余劳动 / 必要劳动
@@ -1215,8 +1294,14 @@
     * 必要劳动时间不变的条件下，由于**工作日的绝对延长**或**提高劳动强度**而进行的剩余价值生产
   * **相对剩余价值的生产**
     * 在工作日长度不变时，由于缩短必要劳动时间，**相应延长剩余劳动时间而进行的剩余价值生产**
-      * 缩短必要劳动实践是通过全社会劳动生产率的提高实现的
-      * 全社会劳动生产率的提高是资本家追逐超额剩余价值的结果
+      * **缩短必要劳动实践是通过全社会劳动生产率的提高实现的**
+      * **全社会劳动生产率的提高是资本家追逐超额剩余价值的结果**
+  * **超额剩余价值**
+    * 个别企业提高生产率之后与社会平均价格之间的差值为超额剩余价值
+      * 个别企业劳动生产率提高的结果
+      * 超额剩余价值的追逐必会导致相对剩余价值的生产
+
+
 
 
 
@@ -1233,7 +1318,7 @@
 
   * 资本家获得无偿占有的剩余价值后，**并不是将其完全用于个人消费，而是将一部分部分转化为资本**，用以购买追加的生产资料和劳动力，使生产在扩大的规模上重复进行。这就是资本主义扩大再生产。资本积累是资本主义扩大再生产的源泉
 
-* 资本积累的源泉是剩余价值，资本积累规模的大小取决于：a．资本家对工人的剥削程度；b．劳动生产率的高低；c．所用资本和所费资本之间的差额；d．资本家预付资本的大小。
+* **资本积累的源泉是剩余价值，资本积累规模的大小取决于：a．资本家对工人的剥削程度；b．劳动生产率的高低；c．所用资本和所费资本之间的差额；d．资本家预付资本的大小。**
 
 * 资本积累造成社会财富两级分化，并导致社会失业现象
 
@@ -1243,7 +1328,7 @@
 
 
 
-12.资本的循环周转与再生产
+**12.资本的循环周转与再生产**
 
 * 资本循环
 
@@ -1255,7 +1340,7 @@
   * 职能
     * 第一阶段执行**货币资本**的职能
     * 第二阶段执行**生产资本**的职能
-    * 第三阶段执行**货币资本**的职能
+    * 第三阶段执行**商品资本**的职能
 
 * 资本循环的前提条件
 
@@ -1263,7 +1348,7 @@
   * 产业资本的三种职能形式必须在**时间上继起**
   * 这表明产业资本的连续循环是**流通过程**和**生产过程**的统一，也是货币资本循环，生产资本循环和商品资本循环三种职能形式的统一
 
-* 社会总资本和再生产和流通
+* **社会总资本再生产和流通**
 
   * **社会总产品(社会总价值)**
     * 价值形态：
@@ -1275,19 +1360,21 @@
 
   * **社会生产**
     * 类型
-      * 第一部类 生产资料生产部类
-      * 第二部类 消费资料生产部类
+      * **第一部类 生产资料生产部类**
+      * **第二部类 消费资料生产部类**
     * 条件
       * 社会在生产的顺利进行，要求生产中所耗费的资本在价值上得到补偿，同时要求实际生产过程中所耗费的生产资料和消费资料得到实物的替换。
       * 两大部类内部各个生产部门之间和**两大部类之间保持一定的比例关系**，社会再生产才能顺利进行
+  
+  ![image-20231225223320561](https://img-blog.csdnimg.cn/direct/02b1154d527c46f9b8ec285a2f6dccc2.png)
 
-13.工资与剩余价值的分配
+13.**工资与剩余价值的分配**
 
 ![image-20231222103452908](https://img-blog.csdnimg.cn/direct/b31e0c4caa744eeca478e09ffa6650ce.png)
 
-14.剩余价值理论的意义
+14.**剩余价值理论的意义**
 
-* **深刻揭露了资本主义生产关系的剥削本质**，阐明了资产阶级与无产阶级之间阶级斗争的经济根源，指出无产阶级革命的必然历史性
+* **深刻揭露了资本主义生产关系的剥削本质**，阐明了资产阶级与无产阶级之间阶级斗争的经济根源，**指出无产阶级革命的必然历史性**
 * 是**马克思主义经济理论的基石**，是无产阶级反对资产阶级，揭示资本主义制度剥削本质的锐利武器，由于**唯物史观和剩余价值的发现，社会主义由空想变为科学**
 
 
@@ -1339,3 +1426,4 @@
 
 
 
+##### 
